--- a/base/templates/base/group.html
+++ b/base/templates/base/group.html
@@ -1,6 +1,16 @@
 {% extends 'base/base.html'%}
 {% load static %}
 {% block group %}
+<style>
+    .topnav {
+          display: none;
+    }
+  </style>
+  <style>
+    .smallnav {
+          display: none;
+    }
+  </style>
 <div class="container-group">
     <div class="d-flex align-items-center">
         <div class="row d-flex justify-content-center">
