--- a/base/templates/base/item.html
+++ b/base/templates/base/item.html
@@ -2,7 +2,11 @@
 {% extends 'base/base.html' %}
 {% load static %}
 {% block content%}
-
+<style>
+    .logo-slika {
+          display: none;
+    }
+  </style>
 <div class="container-fluid overflow-hidden mt-70">
     <div class="vh-100">
         <div class="row justify-content-center margin-test">
