--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -27,15 +27,95 @@
         <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/responsive/2.4.0/css/responsive.bootstrap5.min.css"/>
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" type='text/css' href="{% static 'elden_ring_lore/static/css/style.css' %}">
+        
         <style>
           body,html {
                 height: 100vh;
           }
         </style>
+        
       </head>
 <body>
 <!-- Background image -->
 <div class="slika-iza">
+  <!-- mobile nav -->
+  <div class="smallnav">
+    <nav class="navbar navbar-light bg-transparent">
+      <div class="container-fluid">
+          <button
+              class="navbar-toggler"
+              type="button"
+              data-mdb-toggle="collapse"
+              data-mdb-target="#navbarToggleExternalContent2"
+              aria-controls="navbarToggleExternalContent1"
+              aria-expanded="false"
+              aria-label="Toggle navigation"
+              style="color:#e5d87f;">More
+          </button>
+      </div>
+  </nav>
+  <div class="collapse" id="navbarToggleExternalContent2" dir="RTL">
+      <ul class="shadow-3 py-2 px-3 my-2" style="color:#e5d87f;">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="/">Home</a>
+        </li>
+        <hr>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="/lore/2/">Groups</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="/lore/1/">Places</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="/lore/2/">Groups</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="/lore/3/">People</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="/lore/4/">Events</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="/lore/5/">Other</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="/lore/6/">Creatures</a>
+        </li>
+      </ul>
+  </div>
+  </div>
+  <!-- mobile nav -->
+<!-- big nav -->
+  <div class="topnav">
+    <nav class="navbar navbar-expand">
+        <div class="container-fluid justify">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="/">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="/lore/1/">Places</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="/lore/2/">Groups</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="/lore/3/">People</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="/lore/4/">Events</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="/lore/5/">Other</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="/lore/6/">Creatures</a>
+              </li>
+            </ul>
+        </div>
+      </nav>
+</div>
+<!-- big nav -->
   <div class="logo-slika">
     <a href="/">
       <img src="{% static 'elden_ring_lore/static/css/Site-logo.png'%}" alt='logo.png'/>
@@ -71,13 +151,12 @@
 
 
 
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.min.js"></script>
 <script type="text/javascript" src="https://cdn.datatables.net/1.13.1/js/jquery.dataTables.js"></script>
 <script type="text/javascript" src="https://cdn.datatables.net/1.13.1/js/dataTables.bootstrap5.min.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.0.1/mdb.min.js"></script>
 <script type="text/javascript" src="https://cdn.datatables.net/responsive/2.4.0/js/dataTables.responsive.js"></script>
 <script type="text/javascript" src="{% static 'elden_ring_lore/static/js/scripts.js' %}"></script>
-
 </body>
 </html>
