--- a/base/templates/base/group.html
+++ b/base/templates/base/group.html
@@ -16,17 +16,17 @@
         <div class="row d-flex justify-content-center">
             <div class="col-9 text-center ">
                     <a class="hover-zoom " href="/lore/1/" style="text-decoration:none;">
-                        <img src="{% static 'elden_ring_lore/static/groups/places.jpg' %}" alt='places.jpg' class="img-fluid hover-shadow rounded-4 my-1 mx-1"></a>
+                        <img src="{% static 'elden_ring_lore/static/groups/places_1.webp' %}" alt='places.jpg' class="img-fluid hover-shadow rounded-4 my-1 mx-1"></a>
                     <a class="hover-zoom" href="/lore/2/" style="text-decoration:none;">
-                        <img src="{% static 'elden_ring_lore/static/groups/groups.jpg' %}" alt='groups.jpg' class="img-fluid hover-shadow rounded-4 my-1 mx-1"></a>
+                        <img src="{% static 'elden_ring_lore/static/groups/groups_1.webp' %}" alt='groups.jpg' class="img-fluid hover-shadow rounded-4 my-1 mx-1"></a>
                     <a class="hover-zoom" href="/lore/3/" style="text-decoration:none;">
-                        <img src="{% static 'elden_ring_lore/static/groups/people.jpg' %}" alt='people.jpg' class="img-fluid hover-shadow rounded-4 my-1 mx-1"></a>
+                        <img src="{% static 'elden_ring_lore/static/groups/people_1.webp' %}" alt='people.jpg' class="img-fluid hover-shadow rounded-4 my-1 mx-1"></a>
                     <a class="hover-zoom" href="/lore/4/" style="text-decoration:none;">
-                        <img src="{% static 'elden_ring_lore/static/groups/events.jpg' %}" alt='events.jpg' class="img-fluid hover-shadow rounded-4 my-1 mx-1"></a>
+                        <img src="{% static 'elden_ring_lore/static/groups/events_1.webp' %}" alt='events.jpg' class="img-fluid hover-shadow rounded-4 my-1 mx-1"></a>
                     <a class="hover-zoom" href="/lore/5/" style="text-decoration:none;">
-                        <img src="{% static 'elden_ring_lore/static/groups/other.jpg' %}" alt='other.jpg' class="img-fluid hover-shadow rounded-4 my-1 mx-1"></a>
+                        <img src="{% static 'elden_ring_lore/static/groups/other_1.webp' %}" alt='other.jpg' class="img-fluid hover-shadow rounded-4 my-1 mx-1"></a>
                     <a class="hover-zoom" href="/lore/6/" style="text-decoration:none;">
-                        <img src="{% static 'elden_ring_lore/static/groups/creatures.jpg' %}" alt='creatures.jpg' class="img-fluid hover-shadow rounded-4 my-1 mx-1"></a>
+                        <img src="{% static 'elden_ring_lore/static/groups/creatures_1.webp' %}" alt='creatures.jpg' class="img-fluid hover-shadow rounded-4 my-1 mx-1"></a>
             </div>
         </div>
     </div>
