--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -5,8 +5,8 @@
         
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="Inspired by the Elden Ring lore, this website shows connection between items 
-                                          and some of the most important names in the game">
+        <meta name="description" content="Inspired by the Elden Ring lore, this website shows connection between items and some of the most important names in the game">
+        <meta name="google-site-verification" content="H5jWeX7KuX5aA3uWglEYzawt6weKH919s_Rh2oPULnU"/>
         <title>Elden Ring Lore</title>
         <!-- Font Awesome -->
         <link
