--- a/base/templates/base/item.html
+++ b/base/templates/base/item.html
@@ -1,5 +1,6 @@
 
 {% extends 'base/base.html' %}
+{% block title %}Elden Ring Lore - {{naziv.0}}{% endblock %}
 {% load static %}
 {% block content%}
 <style>
