--- a/base/templates/base/lore_list.html
+++ b/base/templates/base/lore_list.html
@@ -1,4 +1,5 @@
 {% extends 'base/base.html'%}
+{% block title %}Elden Ring Lore - {{title.0}}{% endblock %}
 {% load static %}
 {% block items %}
 <style>
