--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -7,6 +7,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="Inspired by the Elden Ring lore, this website shows connection between items and some of the most important names in the game">
         <meta name="google-site-verification" content="H5jWeX7KuX5aA3uWglEYzawt6weKH919s_Rh2oPULnU"/>
+        <link rel="apple-touch-icon" sizes="180x180" href="{% static 'elden_ring_lore/static/favicon_io/apple-touch-icon.png' %}">
+        <link rel="icon" type="image/png" sizes="32x32" href="{% static 'elden_ring_lore/static/favicon_io/favicon-32x32.png' %}">
+        <link rel="icon" type="image/png" sizes="16x16" href="{% static 'elden_ring_lore/static/favicon_io/favicon-16x16.png' %}">
         <title>{% block title%} {% endblock %}</title>
         
         <!-- Font Awesome -->
